@@ -1,4 +1,24 @@
 # elasticsearch
+
+Elasticsearch 是一个分布式的 RESTful 风格的搜索和数据分析引擎。
+
+   * 查询 ： Elasticsearch 允许执行和合并多种类型的搜索 — 结构化、非结构化、地理位置、度量指标 — 搜索方式随心而变。
+   * 分析 ： 找到与查询最匹配的十个文档是一回事。但是如果面对的是十亿行日志，又该如何解读呢？Elasticsearch 聚合让您能够从大处着眼，探索数据的趋势和模式。
+   * 速度 ： Elasticsearch 很快。真的，真的很快。
+   * 可扩展性 ： 可以在笔记本电脑上运行。 也可以在承载了 PB 级数据的成百上千台服务器上运行。
+   * 弹性 ： Elasticsearch 运行在一个分布式的环境中，从设计之初就考虑到了这一点。
+   * 灵活性 ： 具备多个案例场景。数字、文本、地理位置、结构化、非结构化。所有的数据类型都欢迎。
+   * HADOOP & SPARK ： Elasticsearch + Hadoop
+
+Elasticsearch是一个高度可伸缩的开源全文搜索和分析引擎。它允许您快速和接近实时地存储、搜索和分析大量数据。
+
+用例：
+
+   * 使用Elasticsearch来存储整个产品目录和库存，并为它们提供搜索和自动完成建议。
+   * 收集日志或事务数据，并希望分析和挖掘这些数据，以查找趋势、统计、汇总或异常。使用loghide (Elasticsearch/ loghide /Kibana堆栈的一部分)来收集、聚合和解析数据，然后让loghide将这些数据输入到Elasticsearch中。可以运行搜索和聚合来挖掘任何信息。
+   * 警报平台，允许指定如下规则:“我有兴趣购买特定的电子设备，如果下个月任何供应商的产品价格低于X美元，我希望得到通知”。在这种情况下，你可以抓取供应商的价格，将它们推入到Elasticsearch中，并使用其反向搜索(Percolator)功能来匹配价格走势与客户查询，并最终在找到匹配后将警报推送给客户。
+   * 分析/业务智能需求，并希望快速调查、分析、可视化，并对大量数据提出特别问题(想想数百万或数十亿的记录)。在这种情况下，使用Elasticsearch来存储数据，然后使用Kibana (Elasticsearch/ loghide /Kibana堆栈的一部分)来构建自定义仪表板，以可视化对您来说很重要的数据的各个方面。此外，还可以使用Elasticsearch聚合功能对数据执行复杂的业务智能查询。
+
 # 概念
 
 transport ：通过 TCP 方式访问 ES 
@@ -11,58 +31,70 @@ rest ：通过 HTTP API 方式访问 ES
 
 下载地址：https://www.elastic.co/cn/downloads/elasticsearch
 
-spring 文档地址：https://spring.io/projects/spring-data-elasticsearch
+spring 文档地址：
 
-​							   https://docs.spring.io/spring-data/elasticsearch/docs/4.1.7/reference/html/#elasticsearch.clients
+https://spring.io/projects/spring-data-elasticsearch
 
-spring boot demo：https://github.com/spring-projects/spring-data-examples/tree/master/elasticsearch/example
+[Spring Data Elasticsearch - Reference Documentation](https://docs.spring.io/spring-data/elasticsearch/docs/current/reference/html/)
+
+spring boot demo：https://github.com/spring-projects/spring-data-examples/tree/main/elasticsearch/example
 
 启动：
 
 ```sh
-lizhifudeMBP:bin lizhifu$ cd /Users/lizhifu/Downloads/cloud/elasticsearch-7.12.0/bin
+lizhifudeMBP:bin lizhifu$ cd /Users/lizhifu/Downloads/cloud/elasticsearch-8.8.2/bin
 lizhifudeMBP:bin lizhifu$ ./elasticsearch
 ```
 
-启动日志(部分)：
+启动日志(部分)（注意观察，里面会有密码）：
 
 ```java
-2021-04-14T16:22:36,538][INFO ][o.e.n.Node               ] [lizhifudeMBP.mshome.net] version[7.12.0], pid[95001], build[default/tar/78722783c38caa25a70982b5b042074cde5d3b3a/2021-03-18T06:17:15.410153305Z], OS[Mac OS X/10.16/x86_64], JVM[AdoptOpenJDK/OpenJDK 64-Bit Server VM/15.0.1/15.0.1+9]
-[2021-04-14T16:22:36,541][INFO ][o.e.n.Node               ] [lizhifudeMBP.mshome.net] JVM home [/Users/lizhifu/Downloads/cloud/elasticsearch-7.12.0/jdk.app/Contents/Home], using bundled JDK [true]
-[2021-04-14T16:22:36,542][INFO ][o.e.n.Node               ] [lizhifudeMBP.mshome.net] JVM arguments [-Xshare:auto, -Des.networkaddress.cache.ttl=60, -Des.networkaddress.cache.negative.ttl=10, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -XX:+ShowCodeDetailsInExceptionMessages, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dio.netty.allocator.numDirectArenas=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Djava.locale.providers=SPI,COMPAT, --add-opens=java.base/java.io=ALL-UNNAMED, -XX:+UseG1GC, -Djava.io.tmpdir=/var/folders/2c/wz__rj9n65b6k2npxb_3p_c80000gn/T/elasticsearch-2932438158372358079, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=data, -XX:ErrorFile=logs/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m, -Xms8192m, -Xmx8192m, -XX:MaxDirectMemorySize=4294967296, -XX:InitiatingHeapOccupancyPercent=30, -XX:G1ReservePercent=25, -Des.path.home=/Users/lizhifu/Downloads/cloud/elasticsearch-7.12.0, -Des.path.conf=/Users/lizhifu/Downloads/cloud/elasticsearch-7.12.0/config, -Des.distribution.flavor=default, -Des.distribution.type=tar, -Des.bundled_jdk=true]
-2021-04-14T16:22:46,079][INFO ][o.e.n.Node               ] [lizhifudeMBP.mshome.net] starting ...
-[2021-04-14T16:22:46,164][INFO ][o.e.x.s.c.PersistentCache] [lizhifudeMBP.mshome.net] persistent cache index loaded
-[2021-04-14T16:22:46,293][INFO ][o.e.t.TransportService   ] [lizhifudeMBP.mshome.net] publish_address {127.0.0.1:9300}, bound_addresses {[::1]:9300}, {127.0.0.1:9300}
-[2021-04-14T16:22:46,567][WARN ][o.e.b.BootstrapChecks    ] [lizhifudeMBP.mshome.net] the default discovery settings are unsuitable for production use; at least one of [discovery.seed_hosts, discovery.seed_providers, cluster.initial_master_nodes] must be configured
-[2021-04-14T16:22:46,575][INFO ][o.e.c.c.ClusterBootstrapService] [lizhifudeMBP.mshome.net] no discovery configuration found, will perform best-effort cluster bootstrapping after [3s] unless existing master is discovered
-[2021-04-14T16:22:49,583][INFO ][o.e.c.c.Coordinator      ] [lizhifudeMBP.mshome.net] setting initial configuration to VotingConfiguration{zEPjtE5zStKsMJlZBzQ1nA}
-[2021-04-14T16:22:49,915][INFO ][o.e.c.s.MasterService    ] [lizhifudeMBP.mshome.net] elected-as-master ([1] nodes joined)[{lizhifudeMBP.mshome.net}{zEPjtE5zStKsMJlZBzQ1nA}{n3VqH1OtQO-rS9xayCt3zA}{127.0.0.1}{127.0.0.1:9300}{cdfhilmrstw}{ml.machine_memory=17179869184, xpack.installed=true, transform.node=true, ml.max_open_jobs=20, ml.max_jvm_size=8589934592} elect leader, _BECOME_MASTER_TASK_, _FINISH_ELECTION_], term: 1, version: 1, delta: master node changed {previous [], current [{lizhifudeMBP.mshome.net}{zEPjtE5zStKsMJlZBzQ1nA}{n3VqH1OtQO-rS9xayCt3zA}{127.0.0.1}{127.0.0.1:9300}{cdfhilmrstw}{ml.machine_memory=17179869184, xpack.installed=true, transform.node=true, ml.max_open_jobs=20, ml.max_jvm_size=8589934592}]}
-[2021-04-14T16:22:50,010][INFO ][o.e.c.c.CoordinationState] [lizhifudeMBP.mshome.net] cluster UUID set to [J42UKPDlQ-29sObul3Yw5A]
-[2021-04-14T16:22:50,117][INFO ][o.e.c.s.ClusterApplierService] [lizhifudeMBP.mshome.net] master node changed {previous [], current [{lizhifudeMBP.mshome.net}{zEPjtE5zStKsMJlZBzQ1nA}{n3VqH1OtQO-rS9xayCt3zA}{127.0.0.1}{127.0.0.1:9300}{cdfhilmrstw}{ml.machine_memory=17179869184, xpack.installed=true, transform.node=true, ml.max_open_jobs=20, ml.max_jvm_size=8589934592}]}, term: 1, version: 1, reason: Publication{term=1, version=1}
-[2021-04-14T16:22:50,162][WARN ][o.e.c.r.a.DiskThresholdMonitor] [lizhifudeMBP.mshome.net] high disk watermark [90%] exceeded on [zEPjtE5zStKsMJlZBzQ1nA][lizhifudeMBP.mshome.net][/Users/lizhifu/Downloads/cloud/elasticsearch-7.12.0/data/nodes/0] free: 12.3gb[5.2%], shards will be relocated away from this node; currently relocating away shards totalling [0] bytes; the node is expected to continue to exceed the high disk watermark when these relocations are complete
-[2021-04-14T16:22:50,167][INFO ][o.e.h.AbstractHttpServerTransport] [lizhifudeMBP.mshome.net] publish_address {127.0.0.1:9200}, bound_addresses {[::1]:9200}, {127.0.0.1:9200}
-[2021-04-14T16:22:50,186][INFO ][o.e.n.Node               ] [lizhifudeMBP.mshome.net] started
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+✅ Elasticsearch security features have been automatically configured!
+✅ Authentication is enabled and cluster connections are encrypted.
+
+ℹ️  Password for the elastic user (reset with `bin/elasticsearch-reset-password -u elastic`):
+  3_HQsDJxoTka_kswNUFu
+
+ℹ️  HTTP CA certificate SHA-256 fingerprint:
+  e0c95de5787889357437ab4324ea88fa5a7fbc8ca76e3e5fa0169abc867521d9
+
+ℹ️  Configure Kibana to use this cluster:
+• Run Kibana and click the configuration link in the terminal when Kibana starts.
+• Copy the following enrollment token and paste it into Kibana in your browser (valid for the next 30 minutes):
+  eyJ2ZXIiOiI4LjguMiIsImFkciI6WyIxOTIuMTY4LjMxLjE1Njo5MjAwIl0sImZnciI6ImUwYzk1ZGU1Nzg3ODg5MzU3NDM3YWI0MzI0ZWE4OGZhNWE3ZmJjOGNhNzZlM2U1ZmEwMTY5YWJjODY3NTIxZDkiLCJrZXkiOiJNd1g2WG9rQm5hYVB1LURPNUNHdzo2MENSN1hYN1NHQ3VWLURHTDFzcEJBIn0=
+
+ℹ️  Configure other nodes to join this cluster:
+• On this node:
+  ⁃ Create an enrollment token with `bin/elasticsearch-create-enrollment-token -s node`.
+  ⁃ Uncomment the transport.host setting at the end of config/elasticsearch.yml.
+  ⁃ Restart Elasticsearch.
+• On other nodes:
+  ⁃ Start Elasticsearch with `bin/elasticsearch --enrollment-token <token>`, using the enrollment token that you generated.
+━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 ```
 
-访问地址：http://127.0.0.1:9200/
+访问地址：http://127.0.0.1:9200/ 	 elastic/3_HQsDJxoTka_kswNUFu
+
+> 如果出现无法访问的情况，修改config/elasticsearch.yml文件 xpack.security.http.ssl:enabled: true 改为false后正常访问
 
 ```java
 {
-  "name" : "lizhifudeMBP.mshome.net",
-  "cluster_name" : "elasticsearch",
-  "cluster_uuid" : "J42UKPDlQ-29sObul3Yw5A",
-  "version" : {
-    "number" : "7.12.0",
-    "build_flavor" : "default",
-    "build_type" : "tar",
-    "build_hash" : "78722783c38caa25a70982b5b042074cde5d3b3a",
-    "build_date" : "2021-03-18T06:17:15.410153305Z",
-    "build_snapshot" : false,
-    "lucene_version" : "8.8.0",
-    "minimum_wire_compatibility_version" : "6.8.0",
-    "minimum_index_compatibility_version" : "6.0.0-beta1"
-  },
-  "tagline" : "You Know, for Search"
+    "name": "lizhifudeMBP",
+    "cluster_name": "elasticsearch",
+    "cluster_uuid": "4fVxMGv9TqakRl2KvTXRKA",
+    "version": {
+        "number": "8.8.2",
+        "build_flavor": "default",
+        "build_type": "tar",
+        "build_hash": "98e1271edf932a480e4262a471281f1ee295ce6b",
+        "build_date": "2023-06-26T05:16:16.196344851Z",
+        "build_snapshot": false,
+        "lucene_version": "9.6.0",
+        "minimum_wire_compatibility_version": "7.17.0",
+        "minimum_index_compatibility_version": "7.0.0"
+    },
+    "tagline": "You Know, for Search"
 }
 ```
 
@@ -94,4 +126,8 @@ public class IndexApiTest {
 ```
 
 > 映射修改结果需要安装相应版本的分词器
+
+## IK分词器
+
+[medcl/elasticsearch-analysis-ik: The IK Analysis plugin integrates Lucene IK analyzer into elasticsearch, support customized dictionary. (github.com)](https://github.com/medcl/elasticsearch-analysis-ik)
 
